[package]
name = "lightsql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
serde = {version = "1.0.188", features = ["derive"] }
thiserror = "1.0"
zerocopy = { version = "0.7.5", features = ["derive"] }
